Fixed dumb option bug on mobile

--- a/src/css/reusables/Option.module.css
+++ b/src/css/reusables/Option.module.css
@@ -17,6 +17,7 @@
   margin-bottom: 1.15rem;
   appearance: none;
 
+  background-color: #fff;
   background-image: linear-gradient(45deg, transparent 50%, gray 50%),
     linear-gradient(135deg, gray 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
   background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.3em) 0.4em;
@@ -52,4 +53,8 @@
 
 .label.error {
   color: red;
+}
+
+.disabled {
+  background-color: #e6e6e6;
 }
